# sc2_bot

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  bot_simple.cc  feature_layers.cc  sc2_bot.cc  sc2_bot.cpp
